JDK collections issue with configuration cache